# cartograph

./: .gitignore  CMakeLists.txt  README.md
cmake/: Dependencies.cmake  embedded_queries.hpp.in
docs/: evaluation.md
docs/adr/: 0001-prioritize-clean-systems-design.md  0002-implementation-language-cpp20.md  0003-index-c-not-cpp-or-python.md  0004-parse-with-tree-sitter-not-compiler-frontend.md  0005-linkage-aware-resolution.md  0006-three-phase-share-nothing-pipeline.md  0007-graph-integer-id-soa.md  0008-mmap-persistence.md  0009-interface-library-cli-mcp-shim.md  0010-benchmark-vs-grep.md  0011-incremental-reindex-changed-file-reparse.md
include/cartograph/: bench.hpp  eval.hpp  extractor.hpp  graph.hpp  graph_io.hpp  indexer.hpp  parallel.hpp  parser.hpp  string_arena.hpp
mcp/: README.md  pyproject.toml
mcp/cartograph_mcp/: __init__.py  engine.py  server.py
mcp/tests/: test_mcp_server.py
mcp/tests/fixtures/chain/: chain.c
queries/c/: calls.scm  declarations.scm  definitions.scm  includes.scm  type_uses.scm  types.scm
src/: bench.cpp  eval.cpp  extractor.cpp  graph.cpp  graph_io.cpp  indexer.cpp  parallel.cpp  parser.cpp
src/cli/: main.cpp
tests/: CMakeLists.txt  bench_test.cpp  blast_radius_test.cpp  crawl_test.cpp  declaration_test.cpp  definition_test.cpp  eval_test.cpp  graph_io_test.cpp  graph_soa_test.cpp  include_graph_test.cpp  incremental_test.cpp  linkage_test.cpp  parse_test.cpp  pipeline_test.cpp  string_arena_test.cpp  uses_type_test.cpp  who_calls_test.cpp
tests/fixtures/: simple.c
tests/fixtures/blast/: chain.c  cycle.c
tests/fixtures/calls/: app.c  dup1.c  dup2.c  lib.c
tests/fixtures/crawl/: a.c
tests/fixtures/crawl/sub/: b.c  broken.c
tests/fixtures/crawl/sub/deep/: c.h
tests/fixtures/declarations/: shape.c  shape.h
tests/fixtures/defs/: math.c  util.h
tests/fixtures/eval/: cache.c  ground-truth.txt  log.c  main.c  store.c  store.h  util.c
tests/fixtures/includes/: app.c  config.h  util.h
tests/fixtures/linkage/: conflict_a.c  conflict_b.c  conflict_call.c  extern_call.c  extern_def.c  local_extern.c  local_static.c  macro.c  static_a.c  static_b.c
tests/fixtures/types/: app.c  shapes.c  shapes.h
