[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cartograph-mcp"
version = "0.1.0"
description = "MCP adapter forwarding tool calls to the cartograph engine (ADR-0009)"
requires-python = ">=3.10"
dependencies = ["mcp>=1.2"]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
cartograph-mcp = "cartograph_mcp.server:main"

[tool.setuptools.packages.find]
include = ["cartograph_mcp*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
